# hdc

./: .gitignore  README.md  pyproject.toml
configs/: cicids_continual_hdc.yaml  cicids_continual_lstm.yaml  cicids_continual_svm.yaml  cicids_dual_memory.yaml  cicids_ewc_mlp.yaml  cicids_offline_hdc_one_pass.yaml  cicids_offline_hdc_tuned.yaml  cicids_offline_lstm.yaml  cicids_offline_svm_linear.yaml  cicids_offline_svm_rbf.yaml  cicids_online_hdc.yaml  cicids_online_lstm.yaml  cicids_online_svm.yaml  cicids_static_hdc.yaml  cicids_static_mlp.yaml  cicids_static_svm.yaml  unsw_continual_hdc.yaml  unsw_continual_lstm.yaml  unsw_continual_svm.yaml  unsw_dual_memory.yaml  unsw_ewc_mlp.yaml  unsw_offline_hdc_one_pass.yaml  unsw_offline_hdc_tuned.yaml  unsw_offline_lstm.yaml  unsw_offline_svm_linear.yaml  unsw_offline_svm_rbf.yaml  unsw_online_hdc.yaml  unsw_online_lstm.yaml  unsw_online_svm.yaml  unsw_static_hdc.yaml  unsw_static_mlp.yaml  unsw_static_svm.yaml
scripts/: benchmark_hdc_vs_lstm.py  benchmark_hdc_vs_svm.py  run_experiment.py
src/hdc_nids/: __init__.py  baselines.py  config.py  constants.py  data.py  encoding.py  metrics.py  models.py  plots.py  preprocessing.py  runner.py  utils.py
src/hdc_nids.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cleaning.py  test_encoder.py  test_lstm.py  test_metrics.py  test_model.py  test_offline_models.py  test_offline_split.py  test_paper_hdc.py  test_preprocessing.py  test_svm.py
